# project

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/f_string_demo/: __init__.py  main.py
src/movie_recommender/: __init__.py  data.py  main.py  schemas.py
src/movie_recommender/static/: app.js  index.html  styles.css
tests/: test_main.py
