[project]
name = "movie_recommender"
version = "0.1.0"
description = "A movie recommendation full-stack demo using FastAPI."
authors = ["GitHub Copilot <copilot@example.com>"]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0"
]

[project.scripts]
start = "uvicorn movie_recommender.main:app --reload"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["src"]
